Files/slurm-60241321.out
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) CCconfig        6)  ucx/1.14.1         11) flexiblas/3.3.1
  2) gentoo/2023     7)  libfabric/1.18.0   12) imkl/2023.2.0
  3) gcccore/.12.3   8)  pmix/4.2.4         13) StdEnv/2023
  4) gcc/12.3        9)  ucc/1.2.0
  5) hwloc/2.9.1     10) openmpi/4.1.5
  File "/project/6086407/nileb3/QRNN-MPC/Files/run_some.py", line 682
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 682)
